# PyPermut

./: README.md  pyproject.toml  setup.py
.github/workflows/: testing.yml
examples/: README.txt  compute_auroc_pvalue.py  compute_exact_ttest_ind.py  correct_multiple_correlations.py  correct_multiple_ttest_ind.py
pypermut/: __init__.py  core.py  correction.py  helpers.py  misc.py  ml.py  mstats.py  stats.py
tests/: test_core.py  test_correction.py  test_ml.py  test_stats.py
