[tool.poetry]
name = "pypermut"
version = "0.2.2"
description = "PyPermut is a Python package implementing permutation tests"
authors = ["Quentin Barthelemy", "Anonymous", "Louis Mayaud"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/qbarthelemy/PyPermut"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Statistics",
    "Topic :: Machine Learning",
]
packages = [
    { include = "pypermut" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.16.5"
scipy = "^1.6.0"
matplotlib = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
