[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypermut"
version = "0.2.2"
description = "PyPermut is a Python package implementing permutation tests"
authors = [
    { name = "Quentin Barthelemy" },
    { name = "Anonymous" },
    { name = "Louis Mayaud" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Statistics",
    "Topic :: Machine Learning",
]
requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.16.5",
    "scipy >= 1.6.0",
    "matplotlib >= 3.0.1",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-gallery", "numpydoc", "scikit-learn"]
tests = ["flake8", "pytest"]
